# r-backup

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build.sh  conanfile.txt  feature_test.py  r-backup.default.yml
mixins/: config.yaml
mixins/source/: file-sample-1.yml
src/: CMakeLists.txt  command_line.cpp  command_line.hpp  command_line_action.cpp  command_line_action.hpp  config.cpp  config.hpp  config_file.cpp  config_file.hpp  config_file_parser.cpp  config_file_parser.hpp  date.cpp  date.hpp  main.cpp
src/action/: backup.cpp  backup.hpp  initializer.cpp  initializer.hpp  path_explorer.cpp  path_explorer.hpp
src/command_line/: backup_command_line.cpp  backup_command_line.hpp  command_line.cpp  command_line.hpp  command_line_action.hpp
src/config/: config.cpp  config.hpp  config_file_parser.cpp  config_file_parser.hpp  path_interpreter.cpp  path_interpreter.hpp
src/exceptions/: backup_error.hpp  path_interpreter_exception.hpp
src/utils/: date.cpp  dependencies.hpp  destination_directory.cpp  destination_directory.hpp  enums.hpp  filecopy.cpp  filecopy.hpp  filepath.cpp  filepath.hpp
src/values/: configuration.cpp  configurationvalue.cpp  configurationvalue.hpp  destination.cpp  destinationvalue.hpp  nth.cpp  nth.hpp  strategy.cpp  strategy.hpp
tests/: CMakeLists.txt  command_line.cpp  filecopy.cpp  main.cpp  test_command_line.cpp  test_command_line_action.cpp  test_command_line_error.cpp  test_config.cpp  test_date.cpp
tests/action/: backup.cpp  path_explorer.cpp  test_backup.cpp  test_path_explorer.cpp
tests/config/: test_config.cpp  (+2 more)
(+15 files in other folders)
